--- a/icemc.tex
+++ b/icemc.tex
@@ -26,7 +26,7 @@
 \usepackage{amssymb}
 \usepackage{subfigure}
 \usepackage{lineno}
-\linenumbers
+%\linenumbers
 
 \usepackage{titlesec}
 \titleformat{\paragraph}[runin]
@@ -152,7 +152,7 @@ This paper provides an overview of the \icemc simulation, a detailed description
 
 \section{Acknowledgements}
 \label{sec:ackowledgements}
-We would like to thank the National Aeronautics and Space Administration and the National Science Foundation.  We would especially like to thank the staff of the Columbia Scientific Balloon Facility and the logistical support staff enabling us to perform our work in Antarctica.  We are deeply indebted to those who dedicate their
+We would like to thank the National Aeronautics and Space Administration and the National Science Foundation, especially the Office of Polar Programs.  We would especially like to thank the staff of the Columbia Scientific Balloon Facility and the logistical support staff enabling us to perform our work in Antarctica.  We are deeply indebted to those who dedicate their
 careers to help make our science possible in such remote environments.
 This work was supported by the Kavli Institute for Cosmological Physics at the University of Chicago.  Computing resources were provided by the University of Chicago Research Computing Center and the Ohio Supercomputing Center at The Ohio State University.
 A. Connolly would like to thank the National Science Foundation
