--- a/references.bib
+++ b/references.bib
@@ -18,6 +18,12 @@
   year={1966}
 }
 
+@techreport{nec,
+  title={Numerical Electromagnetics Code (NEC)-Method of Moments. A User-Oriented Computer Code for Analysis of the Electromagnetic Response of Antennas and Other Metal Structures. Part 1: Program Description-Theory. Part 2: Program Description-Code. Volume 1. Revised},
+  author={Burke, Gerald J and Pogio, AJ},
+  year={1981},
+  institution={LAWRENCE LIVERMORE NATIONAL LAB CA}
+}
 
 @article{brun1997root,
   title={ROOT-an object oriented data analysis framework},
@@ -312,11 +318,16 @@ ANITA-3}",
   publisher={Elsevier}
 }
 
+
 @article{bustamante2017measurement,
-  title={Measurement of the Energy-Dependent Neutrino-Nucleon Cross Section Above 10 TeV Using IceCube Showers},
+  title={Extracting the Energy-Dependent Neutrino-Nucleon Cross Section above 10 TeV Using IceCube Showers},
   author={Bustamante, Mauricio and Connolly, Amy},
-  journal={arXiv preprint arXiv:1711.11043},
-  year={2017}
+  journal={Physical Review Letters},
+  volume={122},
+  number={4},
+  pages={041101},
+  year={2019},
+  publisher={APS}
 }
 
 @article{aartsen2017measurement,
@@ -424,4 +435,97 @@ keywords = "radar, surfaces/planets, venus/surface"
   pages={013},
   year={2010},
   publisher={IOP Publishing}
+}
+
+@article{anita3cosmogenic,
+  title={Constraints on the diffuse high-energy neutrino flux from the third flight of ANITA},
+  author={Gorham, PW and Allison, P and Banerjee, O and Batten, L and Beatty, JJ and Bechtol, K and Belov, K and Besson, DZ and Binns, WR and Bugaev, V and others},
+  journal={Physical Review D},
+  volume={98},
+  number={2},
+  pages={022001},
+  year={2018},
+  publisher={APS}
+}
+
+@article{anita4cosmogenic,
+  title={Constraints on the ultra-high energy cosmic neutrino flux from the fourth flight of ANITA},
+  author={Gorham, PW and Allison, P and Banerjee, O and Batten, L and Beatty, JJ and Belov, K and Besson, DZ and Binns, WR and Bugaev, V and Cao, P and others},
+  journal={arXiv preprint arXiv:1902.04005},
+  year={2019}
+}
+
+@article{auger2017,
+  title={Searches for neutrino fluxes in the EeV regime with the Pierre Auger Observatory},
+  author={Zas, Enrique},
+  journal={PoS},
+  pages={64--71},
+  year={2017},
+  publisher={SISSA}
+}
+
+@article{icecube2018,
+  title={Differential limit on the extremely-high-energy cosmic neutrino flux in the presence of astrophysical background from nine years of IceCube data},
+  author={Aartsen, MG and Ackermann, M and Adams, J and Aguilar, JA and Ahlers, M and Ahrens, M and Al Samarai, I and Altmann, D and Andeen, K and Anderson, T and others},
+  journal={Physical Review D},
+  volume={98},
+  number={6},
+  pages={062003},
+  year={2018},
+  publisher={APS}
+}
+
+@article{kkss2002,
+  title={Ultrahigh-energy neutrino fluxes and their constraints},
+  author={Kalashev, Oleg E and Kuzmin, Vadim A and Semikoz, Dmitry V and Sigl, G{\"u}nter},
+  journal={Physical Review D},
+  volume={66},
+  number={6},
+  pages={063004},
+  year={2002},
+  publisher={APS}
+}
+
+@article{takami2009,
+  title={Cosmogenic neutrinos as a probe of the transition from Galactic to extragalactic cosmic rays},
+  author={Takami, Hajime and Murase, Kohta and Nagataki, Shigehiro and Sato, Katsuhiko},
+  journal={Astroparticle Physics},
+  volume={31},
+  number={3},
+  pages={201--211},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@article{ahlers2012,
+  title={Minimal cosmogenic neutrinos},
+  author={Ahlers, Markus and Halzen, Francis},
+  journal={Physical Review D},
+  volume={86},
+  number={8},
+  pages={083010},
+  year={2012},
+  publisher={APS}
+}
+
+@article{falcke2003detecting,
+  title={Detecting radio emission from cosmic ray air showers and neutrinos with a digital radio telescope},
+  author={Falcke, Heino and Gorham, Peter},
+  journal={Astroparticle Physics},
+  volume={19},
+  number={4},
+  pages={477--494},
+  year={2003},
+  publisher={Elsevier}
+}
+
+@article{suprun2003synchrotron,
+  title={Synchrotron radiation at radio frequencies from cosmic ray air showers},
+  author={Suprun, Denis A and Gorham, Peter W and Rosner, Jonathan L},
+  journal={Astroparticle Physics},
+  volume={20},
+  number={2},
+  pages={157--168},
+  year={2003},
+  publisher={Elsevier}
 }
